PGW-26: Fixed grid items alignment and margin between them

--- a/sites/all/themes/tpg_theme/sass/components/pages/_node-type-overview-page.scss
+++ b/sites/all/themes/tpg_theme/sass/components/pages/_node-type-overview-page.scss
@@ -56,7 +56,7 @@
 
     .field-name-field-link-description,
     .field-name-field-paragraph-description {
-      @include rem('max-height', 66px);
+      @include rem('height', 66px);
       overflow: hidden;
     }
 
@@ -92,7 +92,7 @@
 
     & > .field-item {
       display: inline-block;
-      margin-bottom: 20px;
+      margin-bottom: 34px;
       padding-left: 10px;
       padding-right: 10px;
       vertical-align: top;
